--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body 
         {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: url('https://img.freepik.com/free-vector/abstract-business-professional-background-banner-design-multipurpose_1340-16858.jpg?w=1800&t=st=1728280084~exp=1728280684~hmac=d5b735bd01510a080786caf019e6d297aaf863076e1756fab7df1d72603f9575') no-repeat center center fixed;
+            background: url('https://img.freepik.com/free-vector/abstract-fluid-neon-color-3d-effect-business-background-banner-design-multipurpose_1340-16790.jpg') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             padding: 0;
