--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>TaskFlow Solutions</title>
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <style>
-        body 
-        {
+        body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: url('https://img.freepik.com/free-vector/abstract-fluid-neon-color-3d-effect-business-background-banner-design-multipurpose_1340-16790.jpg') no-repeat center center fixed;
             background-size: cover;
@@ -17,24 +17,20 @@
             flex-direction: column;
             min-height: 100vh;
         }
-        .container 
-        {
+        .container {
             width: 100%;
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
             flex: 1;
         }
-        .login-container, .dashboard 
-        {
+        .login-container, .dashboard {
             display: none;
         }
-        .login-container.active, .dashboard.active 
-        {
+        .login-container.active, .dashboard.active {
             display: block;
         }
-        .login-box 
-        {
+        .login-box {
             max-width: 400px;
             margin: 100px auto;
             padding: 40px;
@@ -43,14 +39,12 @@
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
             position: relative;
         }
-        .login-box h2 
-        {
+        .login-box h2 {
             text-align: center;
             color: #ffffff;
             margin-bottom: 20px;
         }
-        .login-box input 
-        {
+        .login-box input {
             width: 100%;
             padding: 15px;
             margin: 12px 0;
@@ -59,8 +53,7 @@
             box-sizing: border-box;
             font-size: 16px;
         }
-        .login-box button 
-        {
+        .login-box button {
             width: 100%;
             padding: 15px;
             background-color: #004a99;
@@ -71,123 +64,103 @@
             font-size: 16px;
             margin-top: 20px;
         }
-        .login-box button:hover 
-        {
-            background-color: #004a99;
+        .login-box button:hover {
+            background-color: #003d80;
         }
-        .header 
-        {
+        .header {
             background-color: #004a99;
             color: white;
             text-align: center;
             padding: 20px;
         }
-        .header img 
-        {
+        .header img {
             height: 50px;
         }
-        .header .title 
-        {
+        .header .title {
             font-size: 32px;
             margin: 10px 0;
             font-weight: bold;
         }
-        .hero 
-        {
+        .hero {
             text-align: center;
             background-color: #004a99;
             color: white;
             padding: 40px 20px;
             margin-bottom: 30px;
         }
-        .hero h1 
-        {
+        .hero h1 {
             margin: 0;
             font-size: 48px;
             font-weight: bold;
         }
-        .hero p 
-        {
+        .hero p {
             font-size: 18px;
         }
-        .footer 
-        {
+        .footer {
             text-align: center;
             padding: 15px;
             background-color: #004a99;
             color: white;
             position: relative;
-            width: 98.44%;
+            width: 98.4%;
             bottom: 0;
             margin-top: auto;
             display: flex;
             flex-direction: column;
             align-items: center;
         }
-        .footer-icons 
-        {
+        .footer-icons {
             margin: 10px 0;
         }
-        .footer-icons i 
-        {
+        .footer-icons i {
             color: white;
             margin: 0 10px;
             font-size: 24px;
             cursor: pointer;
         }
-        .dashboard h2 
-        {
+        .dashboard h2 {
             text-align: center;
             margin-top: 0;
             color: white;
         }
-        .dashboard.active, .h3
-        {
+        .dashboard.active, .h3 {
             display: block;
             color: white;
         }
-        .dashboard ul 
-        {
+        .dashboard ul {
             list-style: none;
             padding: 0;
         }
-        .employee-grid 
-        {
+        .employee-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
             grid-gap: 20px;
             margin: 20px 0;
         }
-        .employee-card 
-        {
+        .employee-card {
             background-color: #fff;
             color: black;
             padding: 15px;
             border-radius: 5px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         }
-        .employee-card h4 
-        {
+        .employee-card h4 {
             margin: 0 0 10px 0;
             font-size: 18px;
         }
-        .employee-card ul 
-        {
+        .employee-card ul {
             list-style: none;
             padding: 0;
             margin: 0;
         }
-        .employee-card ul li 
-        {
+        .employee-card ul li {
             margin: 5px 0;
         }
-        .admin-task-form 
-        {
+        .admin-task-form {
             max-width: 600px;
             margin: 20px auto;
         }
-        .admin-task-form input, .admin-task-form select, .admin-task-form textarea, .admin-task-form button 
-        {
+        .admin-task-form input, .admin-task-form select, .admin-task-form textarea, .admin-task-form button {
             width: 100%;
             padding: 15px;
             margin: 12px 0;
@@ -196,8 +169,7 @@
             font-size: 16px;
             box-sizing: border-box;
         }
-        .admin-task-form button 
-        {
+        .admin-task-form button {
             background-color: #28a745;
             color: white;
             cursor: pointer;
@@ -206,12 +178,10 @@
             font-weight: bold;
             transition: background-color 0.3s ease;
         }
-        .admin-task-form button:hover 
-        {
+        .admin-task-form button:hover {
             background-color: #218838;
         }
-        .btn-logout 
-        {
+        .btn-logout {
             display: block;
             max-width: 200px;
             margin: 20px auto;
@@ -223,17 +193,14 @@
             border-radius: 5px;
             font-size: 16px;
         }
-        .btn-logout:hover 
-        {
+        .btn-logout:hover {
             background-color: #c82333;
         }
-        .task-list 
-        {
+        .task-list {
             list-style: none;
             padding: 0;
         }
-        .task-list li 
-        {
+        .task-list li {
             background-color: #fff;
             color: black;
             padding: 15px;
@@ -241,8 +208,7 @@
             border-radius: 5px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         }
-        .task-list li button 
-        {
+        .task-list li button {
             padding: 10px;
             background-color: #004a99;
             color: white;
@@ -252,20 +218,16 @@
             font-size: 16px;
             margin-top: 10px;
         }
-        .task-list li button:hover 
-        {
-            background-color: #004a99;
+        .task-list li button:hover {
+            background-color: #003d80;
         }
-        .task-list li div 
-        {
+        .task-list li div {
             margin-bottom: 10px;
         }
-        .task-list li strong 
-        {
+        .task-list li strong {
             font-size: 18px;
         }
-        .task-list li button.delete-task 
-        {
+        .task-list li button.delete-task {
             background-color: #dc3545;
             color: white;
             font-size: 16px;
@@ -275,8 +237,7 @@
             cursor: pointer;
             margin-top: 10px;
         }
-        .task-list li button.delete-task:hover 
-        {
+        .task-list li button.delete-task:hover {
             background-color: #c82333;
         }
         .eye-icon {
@@ -284,6 +245,24 @@
             top: 40%;
             right: 20px;
             cursor: pointer;
+            color: #ccc;
+        }
+        .footer .credentials {
+            margin-top: 20px;
+            text-align: left;
+            max-width: 800px;
+        }
+        .footer .credentials h4 {
+            margin-bottom: 10px;
+            color: white;
+        }
+        .footer .credentials ul {
+            list-style: none;
+            padding: 0;
+            color: white;
+        }
+        .footer .credentials ul li {
+            margin: 5px 0;
         }
     </style>
 </head>
@@ -333,6 +312,21 @@
             <i class="fab fa-facebook"></i>
             <i class="fab fa-twitter"></i>
             <i class="fab fa-linkedin"></i>
+        </div>
+        <div class="credentials">
+            <hr>
+            <h4>Default Users:</h4>
+            <ul>
+                <li><strong>Admin:</strong> Email - admin@taskflow.com, Password - admin123</li>
+                <li><strong>Employee1:</strong> Email - employee1@taskflow.com, Password - employee123</li>
+                <li><strong>Employee2:</strong> Email - employee2@taskflow.com, Password - employee123</li>
+                <li><strong>Employee3:</strong> Email - employee3@taskflow.com, Password - employee123</li>
+                <li><strong>Employee4:</strong> Email - employee4@taskflow.com, Password - employee123</li>
+                <li><strong>Employee5:</strong> Email - employee5@taskflow.com, Password - employee123</li>
+                <li><strong>Employee6:</strong> Email - employee6@taskflow.com, Password - employee123</li>
+                <li><strong>Employee7:</strong> Email - employee7@taskflow.com, Password - employee123</li>
+                <li><strong>Employee8:</strong> Email - employee8@taskflow.com, Password - employee123</li>
+            </ul>
         </div>
     </div>
     <script>
@@ -474,6 +468,21 @@
                 }
             }
         };
+
+        // Function to toggle password visibility
+        function togglePasswordVisibility() {
+            const passwordInput = document.getElementById("password");
+            const eyeIcon = document.getElementById("eye");
+            if (passwordInput.type === "password") {
+                passwordInput.type = "text";
+                eyeIcon.classList.remove("fa-eye");
+                eyeIcon.classList.add("fa-eye-slash");
+            } else {
+                passwordInput.type = "password";
+                eyeIcon.classList.remove("fa-eye-slash");
+                eyeIcon.classList.add("fa-eye");
+            }
+        }
     </script>
 </body>
 </html>
